5066.	[cleanup]	Allow unquoted strings to be used as a zone names
			in response-policy statements. [GL #641]

5065.	[bug]		Only set IPV6_USE_MIN_MTU on IPv6. [GL #553]

5064.	[test]		Initalize TZ environment variable before calling
			dns_test_begin in dnstap_test. [GL #624]

5061.	[protocol]	Add support for EID and NIMLOC. [GL #626]

5060.	[bug]		GID, UID and UINFO could not be loaded using unknown
			record format. [GL #627]

5059.	[bug]		Display a per-view list of zones in the web interface.
			[GL #427]

5057.	[protocol]	Add support for ATMA. [GL #619]

5051.	[doc]		Documentation incorrectly stated that the
			"server-addresses" static-stub zone option accepts
			custom port numbers. [GL #582]

5042.	[test]		Make the chained delegations in reclimit behave
			like they would in a regular name server. [GL  #578]

5041.	[test]		The chain test contains a incomplete delegation.
			[GL #568]

5039.	[bug]		Named could fail to preserve owner name case of new
			RRset. [GL #420]

	--- 9.11.5 released ---

	--- 9.11.5rc1 released ---

5038.	[bug]		Chaosnet addresses were compared incorrectly.
			[GL #562]

5034.	[bug]		A race between threads could prevent zone maintenance
			scheduled immediately after zone load from being
			performed. [GL #542]

5033.	[bug]		When adding NTAs to multiple views using "rndc nta",
			the text returned via rndc was incorrectly terminated
			after the first line, making it look as if only one
			NTA had been added. Also, it was not possible to
			differentiate between views with the same name but
			different classes; this has been corrected with the
			addition of a "-class" option. [GL #105]

5032.	[func]		Add krb5-selfsub and ms-selfsub update policy rules.
			[GL #511]

5030.	[bug]		Align CMSG buffers to a 64-bit boundary, fixes crash
			on architectures with strict alignment. [GL #521]

5028.	[bug]		Spread the initial RRSIG expiration times over the
			entire working sig-validity-interval when signing a