@@ -236,6 +236,7 @@ sink02			SINK	8 0 2 l4ik
 
 ; type 42
 apl01			APL	!1:10.0.0.1/32 1:10.0.0.0/24
+apl02			APL
 
 ; type 43
 ds01			DS	12892 5 2 26584835CA80C81C91999F31CFAF2A0E89D4FF1C8FAFD0DDB31A85C7 19277C13
