@@ -1,3 +1,6 @@
+5070.	[bug]		Record types which support a empty rdata field were
+			not handling the empty rdata field case. [GL #638]
+
 5066.	[cleanup]	Allow unquoted strings to be used as a zone names
 			in response-policy statements. [GL #641]
 
